Add coordinate filter functionality and timeline section styles

--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
   <!-- <link rel="stylesheet" href="style/base.scss"> -->
   <!-- <link rel="stylesheet" href="style/main.scss"> -->
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <!-- Chart.js for timeline and heatmap visualizations -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </head>
 <body>
   <div id="app">
     <!-- Welcome screen or file upload area will be rendered here -->
   </div>
+  <footer style="text-align:center;padding:1.5em 0 1em 0;font-size:1em;opacity:0.8;letter-spacing:0.01em;">
+    <span>This project is open source and can be forked on 
+      <a href="https://github.com/moricel/EntityLoggerVisualizer" target="_blank" rel="noopener noreferrer" style="color:#60a5fa;text-decoration:underline;">GitHub</a>.
+    </span>
+  </footer>
   <script src="main.js"></script>
 </body>
 </html>
