--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <div id="app">
     <!-- Welcome screen or file upload area will be rendered here -->
   </div>
-  <footer style="text-align:center;padding:1.5em 0 1em 0;font-size:1em;opacity:0.8;letter-spacing:0.01em;">
+  <footer style="text-align:center;padding:1.5em 0 1em 0;font-size:1em;opacity:0.8;letter-spacing:0.01em;padding: bottom 80px;">
     <span>This project is open source and can be forked on 
-      <a href="https://github.com/moricel/EntityLoggerVisualizer" target="_blank" rel="noopener noreferrer" style="color:#60a5fa;text-decoration:underline;">GitHub</a>.
+      <a href="https://github.com/BENZOOgataga/EntityLoggerVisualizer" target="_blank" rel="noopener noreferrer" style="color:#60a5fa;text-decoration:underline;">GitHub</a>.
     </span>
   </footer>
   <script src="main.js"></script>
