Add favicon and PWA icons to the HTML head

--- a/index.html
+++ b/index.html
@@ -16,9 +16,17 @@
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <!-- Chart.js for timeline and heatmap visualizations -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+  <!-- Favicon and PWA icons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+  <link rel="manifest" href="assets/site.webmanifest">
+  <link rel="shortcut icon" href="assets/favicon.ico">
 </head>
 <body>
   <div id="app">
+    <!-- Optionally show logo on welcome screen -->
+    <!-- <img src="assets/logo_no_background.png" alt="Pegasus EntityLogger Visualizer Logo" style="display:block;margin:0 auto 2em auto;max-width:120px;"> -->
     <!-- Welcome screen or file upload area will be rendered here -->
   </div>
   <footer style="text-align:center;padding:1.5em 0 1em 0;font-size:1em;opacity:0.8;letter-spacing:0.01em;padding: bottom 80px;">
