Fix footer padding and adjust welcome logo size for better visibility

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- <img src="assets/logo_no_background.png" alt="Pegasus EntityLogger Visualizer Logo" style="display:block;margin:0 auto 2em auto;max-width:120px;"> -->
     <!-- Welcome screen or file upload area will be rendered here -->
   </div>
-  <footer style="text-align:center;padding:1.5em 0 1em 0;font-size:1em;opacity:0.8;letter-spacing:0.01em;padding: bottom 80px;">
+  <footer style="text-align:center;padding:1.5em 0 1em 0;font-size:1em;opacity:0.8;letter-spacing:0.01em;padding-bottom: 90px;">
     <span>This project is open source and can be forked on 
       <a href="https://github.com/BENZOOgataga/EntityLoggerVisualizer" target="_blank" rel="noopener noreferrer" style="color:#60a5fa;text-decoration:underline;">GitHub</a>.
     </span>
